--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -28,6 +28,8 @@
     "crawlee": "^3.15.3",
     "playwright": "^1.56.1",
     "puppeteer": "^24.31.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
