refactor(db): reorganize schema exports and add resumeId tracking
- Move schema exports from main index to explicit schema subpath imports
- Remove schema re-exports from @selectio/db main entry point
- Update all API routers to import schemas from @selectio/db/schema
- Add resumeId field to vacancyResponse table for resume tracking
- Include resumeId in CreateVacancyResponseSchema validation
- Extract resumeId parsing utility to dedicated utils module
- Add resume ID extraction helper function for HH parser
- Improve response parser with tracking counters for processed/skipped responses
- Update package.json exports to remove unused type declarations
- Consolidate schema imports across user, vacancy, and response routers

--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "@selectio/tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
+    "outDir": "dist"
   },
-  "include": [
-    "src",
-    "trigger.config.ts"
-  ]
+  "include": ["src", "trigger.config.ts"]
 }
