--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ AUTH_DISCORD_SECRET=''
 # Used by @selectio/jobs package for login automation
 HH_EMAIL='kodermax@gmail.com'
 HH_PASSWORD=''
+
+# DeepSeek API key for AI-powered resume screening
+# Get your API key from https://platform.deepseek.com
+# Used by @selectio/jobs package for resume screening
+DEEPSEEK_API_KEY=''
