--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "bun run src/index.ts",
+    "dev": "bun with-env trigger dev",
     "hh:parse": "bun with-env bun run src/hh-response-parser.ts",
     "hh:enrich": "bun with-env bun run src/hh-enrich-responses.ts",
     "hh:test": "bun with-env bun run src/test.ts",
@@ -25,9 +25,11 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^1.0.4",
     "@selectio/db": "workspace:*",
     "@t3-oss/env-core": "0.13.8",
     "@trigger.dev/sdk": "4.1.2",
+    "ai": "^5.0.102",
     "crawlee": "3.15.3",
     "puppeteer": "24.31.0",
     "puppeteer-extra": "3.3.6",
