--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -25,7 +25,7 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "^1.0.4",
+    "@ai-sdk/deepseek": "^1.0.29",
     "@selectio/db": "workspace:*",
     "@t3-oss/env-core": "0.13.8",
     "@trigger.dev/sdk": "4.1.2",
@@ -39,10 +39,11 @@
   },
   "devDependencies": {
     "@selectio/tsconfig": "workspace:*",
-    "@trigger.dev/build": "4.1.2",
+    "@trigger.dev/build": "^4.1.2",
     "@types/bun": "1.3.3",
     "@types/node": "24.10.1",
     "cross-env": "^10.1.0",
+    "trigger.dev": "^4.1.2",
     "typescript": "5.9.3"
   }
 }
