--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -26,15 +26,12 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.29",
-    "@langfuse/otel": "^4.4.2",
-    "@opentelemetry/auto-instrumentations-node": "^0.67.1",
-    "@opentelemetry/sdk-node": "^0.208.0",
-    "@opentelemetry/sdk-trace-node": "^2.2.0",
     "@selectio/db": "workspace:*",
     "@t3-oss/env-core": "0.13.8",
     "@trigger.dev/sdk": "4.1.2",
     "ai": "^5.0.102",
     "crawlee": "3.15.3",
+    "langfuse": "^3.38.6",
     "puppeteer": "24.31.0",
     "puppeteer-extra": "3.3.6",
     "puppeteer-extra-plugin-stealth": "2.11.2",
