--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.29",
+    "@inngest/realtime": "^0.4.5",
     "@selectio/db": "workspace:*",
     "@t3-oss/env-core": "0.13.8",
     "@trigger.dev/sdk": "4.1.2",
