--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@inngest/realtime": "^0.4.5",
     "@selectio/api": "workspace:*",
     "@selectio/auth": "workspace:*",
     "@selectio/db": "workspace:*",
