feat(telegram): add message sending by username with MTCute integration
- Add Telegram API credentials (API_ID, API_HASH) to environment configuration
- Implement send-by-username endpoint for sending messages via Telegram username
- Create Inngest job for async message delivery by username
- Add MTCute client initialization in telegram-bot package
- Update response actions to use username-based sending instead of chatId
- Add telegramUsername field to response data types and components
- Refactor mutation options usage in integration-card for consistency
- Add tRPC steering documentation for query and mutation patterns
- Enable message sending to candidates via their Telegram username without requiring chatId

--- a/.env.example
+++ b/.env.example
@@ -36,4 +36,9 @@ LANGFUSE_BASE_URL='https://cloud.langfuse.com'
 # Get your token from @BotFather on Telegram
 TELEGRAM_BOT_TOKEN=''
 
+# Telegram API credentials for MTCute (sending messages by username)
+# Get from https://my.telegram.org/apps
+TELEGRAM_API_ID=''
+TELEGRAM_API_HASH=''
+
 
