--- a/packages/telegram-bot/package.json
+++ b/packages/telegram-bot/package.json
@@ -14,10 +14,12 @@
     "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "bun with-env bun run src/index.ts",
+    "test:mtcute": "bun with-env bun run src/test-mtcute.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@mtcute/bun": "^0.27.1",
     "@selectio/db": "workspace:*",
     "@selectio/lib": "workspace:*",
     "grammy": "^1.38.4"
