feat(chat): redesign chat interface with Telegram-style messaging UI
- Add chat client component for candidate chat page routing
- Add candidates list component for dashboard navigation
- Create new chat list and chat list item components for conversation management
- Redesign chat container with Telegram-style dark theme and pattern background
- Update chat header with back button, avatar image support, and online status indicator
- Add message grouping by date with localized date separators (Today, Yesterday, etc.)
- Enhance chat input with improved styling and placeholder text
- Update chat message component styling for better visual hierarchy
- Add date-fns locale support for Russian date formatting
- Disable TypeScript auto-closing tags in VSCode settings for better development experience
- Improve overall chat UX with better visual feedback and navigation patterns

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,6 @@
     "next/router.d.ts",
     "next/dist/client/router.d.ts"
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.autoClosingTags": false
 }
