feat(telegram): add voice message transcription with OpenAI Whisper
- Add OpenAI API key configuration to environment variables and validation schema
- Create transcription service using OpenAI Whisper API for voice message processing
- Add voiceTranscription field to telegram_messages table for storing transcribed text
- Link telegram conversations to vacancy responses via responseId foreign key
- Update conversation and response relations to use proper foreign key references
- Add @ai-sdk/openai and ai dependencies to telegram-bot package
- Transcribe voice messages and store transcription alongside original audio
- Use transcribed text as message content when available, fallback to default text
- Enable Russian language support for voice transcription

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ AUTH_DISCORD_SECRET=''
 # Generate via: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 ENCRYPTION_KEY=''
 
+# OpenAI API key for Whisper transcription
+# Get your API key from https://platform.openai.com
+OPENAI_API_KEY=''
+
 # DeepSeek API key for AI-powered resume screening
 # Get your API key from https://platform.deepseek.com
 # Used by @selectio/jobs package for resume screening
