--- a/packages/telegram-bot/package.json
+++ b/packages/telegram-bot/package.json
@@ -18,10 +18,12 @@
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.74",
     "@mtcute/bun": "^0.27.1",
     "@selectio/config": "workspace:*",
     "@selectio/db": "workspace:*",
     "@selectio/lib": "workspace:*",
+    "ai": "^5.0.104",
     "grammy": "^1.38.4"
   },
   "devDependencies": {
