--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.30",
+    "@ai-sdk/openai": "^2.0.74",
     "@inngest/realtime": "^0.4.5",
     "@selectio/db": "workspace:*",
     "@selectio/lib": "workspace:*",
