--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,10 @@ POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.poole
 # @see https://www.better-auth.com/docs/installation
 AUTH_SECRET='supersecret'
 
-# Preconfigured Discord OAuth provider, works out-of-the-box
-# @see https://www.better-auth.com/docs/authentication/discord
-AUTH_DISCORD_ID=''
-AUTH_DISCORD_SECRET=''
+# Preconfigured GOOGLE OAuth provider, works out-of-the-box
+# @see https://www.better-auth.com/docs/authentication/google
+AUTH_GOOGLE_ID=''
+AUTH_GOOGLE_SECRET=''
 
 # Encryption key for storing sensitive data (integrations credentials)
 # Generate via: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
