--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -1,13 +1,13 @@
-name: Deploy Web
+name: Deploy Jobs
 on:
   push:
     branches: [main]
     paths:
-      - "apps/web/**"
+      - "packages/jobs/**"
       - "packages/**"
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository }}-jobs
   CI: "true"
   KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
   IMAGE_TAG: ${{ github.sha }}
@@ -30,7 +30,8 @@ jobs:
         run: |
           IMAGE_ID=$REGISTRY/$IMAGE_NAME
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          docker build . --file apps/web/Dockerfile \
+          docker build . --file packages/jobs/Dockerfile \
+            --build-arg POSTGRES_URL=${{ secrets.POSTGRES_URL }} \
             --tag $IMAGE_ID:$IMAGE_TAG \
             --tag $IMAGE_ID:latest
           docker push $IMAGE_ID:latest
@@ -38,4 +39,4 @@ jobs:
       - name: Deploy To Cluster
         uses: kodermax/kubectl-aws-eks@main
         with:
-          args: set image deployment/selectio-web selectio-web=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          args: set image deployment/selectio-jobs selectio-jobs=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
