feat(infra): add jobs service to docker-compose and refactor S3 client initialization
- Add jobs service container to docker-compose.yml with build configuration and environment setup
- Refactor S3 client initialization to use lazy singleton pattern via getS3Client() function
- Move AWS credential validation into getS3Client() to defer initialization until first use
- Update all S3 operations to use getS3Client() instead of direct s3Client reference
- Improve S3 client lifecycle management for better resource handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 volumes:
   minio:
 services:
+
   inbucket:
     restart: always
     image: inbucket/inbucket:latest
@@ -41,3 +42,19 @@ services:
       /usr/bin/mc anonymous set public minio/files.acme.com;
       exit 0;
       "
+  jobs:
+    restart: always
+    build:
+      context: .
+      dockerfile: packages/jobs/Dockerfile
+    container_name: jobs
+    ports:
+      - 8000:8000
+    env_file:
+      - .env
+    depends_on:
+      - minio
+      - inbucket
+    environment:
+      - NODE_ENV=production
+      - PORT=8000
