--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,45 +1,56 @@
-FROM oven/bun:1.3.3-alpine AS base
+FROM node:24-alpine AS base
 
 FROM base AS builder
 RUN apk update
 RUN apk add --no-cache libc6-compat
+# Install bun
+RUN npm install -g bun
+# Set working directory
 WORKDIR /app
-RUN bun install -g turbo
+# Install turbo globally
+RUN npm install -g turbo@2.6.1
 COPY . .
+
+# Generate a partial monorepo with a pruned lockfile for a target workspace.
+# Using @selectio/web as the target workspace
 RUN turbo prune @selectio/web --docker
 
+# Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
 RUN apk update
-RUN apk add --no-cache libc6-compat python3 make g++
+RUN apk add --no-cache libc6-compat
+# Install bun
+RUN npm install -g bun
 WORKDIR /app
 
+# First install the dependencies (as they change less often)
 COPY --from=builder /app/out/json/ .
-RUN bun install --frozen-lockfile
+COPY --from=builder /app/bun.lock .
+RUN bun install
 
+# Build the project
 COPY --from=builder /app/out/full/ .
-
-ENV VERCEL_ENV="production"
-ENV CI=true
-ENV NODE_ENV="production"
-
 ARG POSTGRES_URL
-ENV POSTGRES_URL=${POSTGRES_URL}
-
-ARG PORT
-ENV PORT=${PORT}
-
-RUN bun run build --filter=@selectio/web...
+ENV POSTGRES_URL=$POSTGRES_URL
+ENV CI=true
+RUN bun turbo run build --filter=@selectio/web
 
 FROM base AS runner
 WORKDIR /app
 
+# Don't run production as root
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 USER nextjs
 
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
 
-ENV HOSTNAME="0.0.0.0"
-CMD ["bun", "run", "apps/web/server.js"]
+# Expose port
+EXPOSE 3000
+
+# Use node to run the server
+CMD ["node", "apps/web/server.js"]
