feat(auth): implement role-based access control for dashboard
- Add role field to users table with admin/user types
- Create getUserRole and isAdmin utility functions in auth-utils
- Implement dashboard access check redirecting non-admins to access-denied page
- Add access-denied page with sign-out functionality
- Update NavUser component to use API endpoint for sign-out
- Create set-admin-role script for managing admin assignments
- Add comprehensive documentation for roles setup and quick start
- Update workspace configuration to include apps directory
- Restrict dashboard access to admin users only, improving security

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -25,6 +25,7 @@
     "push": "bun with-env drizzle-kit push",
     "studio": "bun with-env drizzle-kit studio",
     "generate-key": "bun src/scripts/generate-encryption-key.ts",
+    "set-admin": "bun with-env bun src/scripts/set-admin-role.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "bun run --env-file ../../.env"
   },
