--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -55,6 +55,7 @@
     "cross-env": "^10.1.0",
     "inngest-cli": "^1.14.0",
     "trigger.dev": "^4.1.2",
+    "tsup": "8.5.1",
     "typescript": "5.9.3"
   }
 }
