feat(screening): refactor progress dialog to toolbar component
- Move ScreeningProgressDialog from response-table to response-table-toolbar for better component organization
- Update import path for screenNewResponsesChannel from "@selectio/jobs" to "@selectio/jobs/channels"
- Add vacancyId and onScreeningDialogClose props to ResponseTableToolbar component
- Replace AlertDialog with simple Button for "Screen New" action to improve UX
- Enhance ScreeningProgressDialog with dynamic title showing completion status
- Update dialog description to reflect real-time progress tracking
- Improve result display with gradient background and grid layout for better visual hierarchy
- Add CheckCircle2 icon to dialog title when screening is completed
- Create new channels-client.ts file in packages/jobs for channel management
- Consolidate screening UI logic into toolbar component for improved maintainability

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -10,6 +10,9 @@
     },
     "./client": {
       "default": "./src/inngest/client.ts"
+    },
+    "./channels": {
+      "default": "./src/inngest/channels-client.ts"
     }
   },
   "license": "MIT",
