ci(telegram-bot): add docker containerization and update startup flow
- Add Dockerfile for telegram-bot package with multi-stage build using Bun
- Add telegram-bot service to docker-compose.yml with environment configuration
- Extract bot startup logic into separate start.ts file for cleaner module exports
- Update dev script to reference new start.ts entry point
- Disable EKS deployment job in web-ya workflow
- Refactor index.ts to export only bot utilities, removing startup code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,3 +68,13 @@ services:
       - NODE_ENV=production
       - PORT=3000
       - HOSTNAME=0.0.0.0
+  telegram-bot:
+    restart: always
+    build:
+      context: .
+      dockerfile: packages/telegram-bot/Dockerfile
+    container_name: telegram-bot
+    env_file:
+      - .env
+    environment:
+      - NODE_ENV=production
