--- a/.github/workflows/web-ya.yml
+++ b/.github/workflows/web-ya.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   # Deploy to EKS
   deploy:
+    if: false
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.event.pull_request.head.ref, 'dependabot/') == false && startsWith(github.event.pull_request.head.ref, 'renovate/') == false }}
     steps:
