--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -31,7 +31,7 @@
     "with-env": "bun run --env-file ../../.env"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "^1.0.30",
+    "@ai-sdk/deepseek": "1.0.30",
     "@ai-sdk/openai": "^2.0.74",
     "@inngest/realtime": "^0.4.5",
     "@selectio/config": "workspace:*",
