--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
           CR_REGISTRY: crpb8701utioog2loisu
-          CR_REPOSITORY: jobs
+          CR_REPOSITORY: selectio-jobs
           IMAGE_TAG: ${{ github.sha }}
         with:
           args: set image deployment/$CR_REPOSITORY $CR_REPOSITORY=cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
@@ -45,4 +45,4 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: rollout status deployment/jobs
+          args: rollout status deployment/selectio-jobs
