--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "1.0.30",
-    "@ai-sdk/openai": "^2.0.74",
+    "@ai-sdk/openai": "2.0.74",
     "@inngest/realtime": "^0.4.5",
     "@selectio/config": "workspace:*",
     "@selectio/db": "workspace:*",
