--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -39,6 +39,7 @@
     "@selectio/tg-client": "workspace:*",
     "@t3-oss/env-core": "0.13.8",
     "ai": "5.0.104",
+    "axios": "^1.13.2",
     "crawlee": "3.15.3",
     "inngest": "^3.46.0",
     "langfuse": "^3.38.6",
