--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "@vercel/analytics": "^1.6.1",
     "better-auth": "1.4.5",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "react": "19.2.1",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@selectio/tailwind-config": "workspace:*",
     "@selectio/tsconfig": "workspace:*",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "24.10.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
