--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,10 @@ LANGFUSE_BASE_URL='https://cloud.langfuse.com'
 # Get your token from @BotFather on Telegram
 TELEGRAM_BOT_TOKEN=''
 
+# Telegram Bot Username (without @)
+# Used for generating invite links
+TELEGRAM_BOT_USERNAME=''
+
 # Telegram API credentials for MTCute (sending messages by username)
 # Get from https://my.telegram.org/apps
 TELEGRAM_API_ID=''
