feat(workspace): Improve Russian localization for workspace terminology
- Replace "workspace" with "рабочее пространство" in workspace switcher dropdown
- Update create workspace dialog title to use proper Russian translation
- Change form label from "Название workspace" to "Название рабочего пространства"
- Rename "Workspace slug" field label to "Адрес пространства" for clarity
- Simplify form description text by removing redundant "workspace" reference
- Update placeholder text in description field to "Краткое описание"
- Improve consistency of Russian terminology throughout workspace creation UI

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ OPENAI_API_KEY=''
 
 # DeepSeek API key for AI-powered resume screening
 # Get your API key from https://platform.deepseek.com
-# Used by @selectio/jobs package for resume screening
+# Used by @qbs-autonaim/jobs package for resume screening
 DEEPSEEK_API_KEY=''
 
 # Langfuse observability for AI SDK
