feat(auth): Add application URL configuration and update branding
- Add NEXT_PUBLIC_APP_URL environment variable to .env.example for workspace URL configuration
- Update application branding from "Selectio" to "QBS Автонайм" in OTP and signin pages
- Update onboarding page to dynamically generate workspace URL using configured app URL
- Add NEXT_PUBLIC_APP_URL to environment validation schema with URL format validation
- Replace hardcoded domain reference with dynamic host extraction from app URL
- Enables flexible deployment across different domains and environments

--- a/.env.example
+++ b/.env.example
@@ -57,4 +57,7 @@ AWS_ACCESS_KEY_ID='minioadmin'
 AWS_SECRET_ACCESS_KEY='minioadmin'
 AWS_S3_FORCE_PATH_STYLE='true'
 
+# Application URL (used for workspace URLs and emails)
+APP_URL='http://localhost:3000'
+
 
