--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "engines": {
     "node": "^22.21.0",
-    "bun": "^1.3.3"
+    "bun": "1.3.4"
   },
   "scripts": {
     "build": "turbo run build",
@@ -29,12 +29,12 @@
     "ui-add": "turbo run ui-add"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.8",
-    "@turbo/gen": "^2.6.3",
-    "turbo": "^2.6.3",
+    "@biomejs/biome": "2.3.8",
+    "@turbo/gen": "2.6.3",
+    "turbo": "2.6.3",
     "typescript": "5.9.3"
   },
-  "packageManager": "bun@1.3.3",
+  "packageManager": "bun@1.3.4",
   "workspaces": [
     "apps/*",
     "packages/*",
