--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -46,7 +46,7 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: rollout status deployment/qbs-autonaim-jobs
+          args: rollout status deployment/qbs-autonaim-jobs -n qbs
       - name: Sync Inngest App
         run: |
           sleep 10
