--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -39,10 +39,10 @@ jobs:
           CR_REPOSITORY: qbs-autonaim-bot
           IMAGE_TAG: ${{ github.sha }}
         with:
-          args: set image deployment/$CR_REPOSITORY $CR_REPOSITORY=cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
+          args: set image deployment/$CR_REPOSITORY $CR_REPOSITORY=cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -n qbs
       - name: Verify Deployment
         uses: kodermax/kubectl-aws-eks@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: rollout status deployment/qbs-autonaim-bot
+          args: rollout status deployment/qbs-autonaim-bot -n qbs
