--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -16,10 +16,14 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "1.0.31",
     "@aws-sdk/client-s3": "3.947.0",
     "@aws-sdk/s3-request-presigner": "3.947.0",
     "@qbs-autonaim/config": "workspace:*",
-    "sharp": "^0.34.5"
+    "ai": "5.0.108",
+    "langfuse": "3.38.6",
+    "sharp": "^0.34.5",
+    "zod": "4.1.13"
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
