--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -30,7 +30,7 @@
     "@qbs-autonaim/config": "workspace:*",
     "@qbs-autonaim/db": "workspace:*",
     "@qbs-autonaim/lib": "workspace:*",
-    "hono": "^4.10.8",
+    "hono": "4.10.8",
     "zod": "^4.1.13"
   },
   "devDependencies": {
