--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -30,6 +30,7 @@
     "@qbs-autonaim/config": "workspace:*",
     "@qbs-autonaim/db": "workspace:*",
     "@qbs-autonaim/lib": "workspace:*",
+    "@qbs-autonaim/prompts": "workspace:*",
     "hono": "4.10.8",
     "zod": "^4.1.13"
   },
