--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "db:migrate-workspaces": "bun --filter @qbs-autonaim/db migrate-workspaces",
     "dev": "turbo watch dev --continue",
     "dev:next": "turbo watch dev -F @qbs-autonaim/nextjs...",
+    "dev:all": "concurrently \"bun run api:dev\" \"bun run bot:dev\" \"bun run jobs:dev\"",
+    "jobs:dev": "bun --filter @qbs-autonaim/jobs dev",
+    "api:dev": "bun --filter @qbs-autonaim/tg-client api:dev",
+    "bot:dev": "bun --filter @qbs-autonaim/tg-client bot:dev",
     "format": "biome format .",
     "format:fix": "biome format --write .",
     "hh:login": "bun --filter @qbs-autonaim/jobs hh:login",
@@ -31,6 +35,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@turbo/gen": "2.6.3",
+    "concurrently": "^9.1.2",
     "turbo": "2.6.3",
     "typescript": "5.9.3"
   },
