--- a/.env.example
+++ b/.env.example
@@ -21,13 +21,22 @@ AUTH_GOOGLE_SECRET=''
 # Generate via: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 ENCRYPTION_KEY=''
 
-# OpenAI API key for Whisper transcription
+# AI Provider Configuration
+# Choose between 'openai' or 'deepseek' (default: deepseek)
+AI_PROVIDER='deepseek'
+
+# AI Model (optional, uses defaults if not specified)
+# For OpenAI: gpt-4o-mini, gpt-4o, gpt-4-turbo, gpt-3.5-turbo
+# For DeepSeek: deepseek-chat, deepseek-coder
+AI_MODEL=''
+
+# OpenAI API key (required if AI_PROVIDER=openai)
+# Also used for Whisper transcription
 # Get your API key from https://platform.openai.com
 OPENAI_API_KEY=''
 
-# DeepSeek API key for AI-powered resume screening
+# DeepSeek API key (required if AI_PROVIDER=deepseek)
 # Get your API key from https://platform.deepseek.com
-# Used by @qbs-autonaim/jobs package for resume screening
 DEEPSEEK_API_KEY=''
 
 # Langfuse observability for AI SDK
