--- a/turbo.json
+++ b/turbo.json
@@ -65,6 +65,8 @@
     "AWS_SECRET_ACCESS_KEY",
     "AWS_REGION",
     "AWS_S3_BUCKET",
+    "AI_PROVIDER",
+    "AI_MODEL",
     "OPENAI_API_KEY",
     "DEEPSEEK_API_KEY",
     "LANGFUSE_SECRET_KEY",
