--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "1.0.31",
+    "@ai-sdk/openai": "2.0.80",
     "@aws-sdk/client-s3": "3.948.0",
     "@aws-sdk/s3-request-presigner": "3.948.0",
     "@qbs-autonaim/config": "workspace:*",
