--- a/.github/workflows/tg-client.yml
+++ b/.github/workflows/tg-client.yml
@@ -4,6 +4,7 @@ on:
     branches: [main]
     paths:
       - 'packages/tg-client/**'
+      - 'packages/jobs/**'
 jobs:
   # Deploy to EKS
   deploy:
