--- a/.github/workflows/tg-client.yml
+++ b/.github/workflows/tg-client.yml
@@ -28,7 +28,7 @@ jobs:
           CR_REPOSITORY: qbs-autonaim-tg-client
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -f packages/tg-client/Dockerfile.api -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest .
+          docker build -f packages/tg-client/Dockerfile -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest .
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
       - name: Deploy To Cluster
