--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "db:migrate-workspaces": "bun --filter @qbs-autonaim/db migrate-workspaces",
     "dev": "turbo watch dev --continue",
     "dev:next": "turbo watch dev -F @qbs-autonaim/nextjs...",
-    "dev:all": "concurrently \"bun run api:dev\" \"bun run jobs:dev\" \"bun run bot:dev\"",
+    "dev:all": "concurrently \"bun run tg:dev\" \"bun run jobs:dev\"",
     "jobs:dev": "bun --filter @qbs-autonaim/jobs dev",
-    "api:dev": "bun --filter @qbs-autonaim/tg-client api:dev",
-    "bot:dev": "bun --filter @qbs-autonaim/tg-client bot:dev",
+    "tg": "bun --filter @qbs-autonaim/tg-client start",
+    "tg:dev": "bun --filter @qbs-autonaim/tg-client start:dev",
     "format": "biome format .",
     "format:fix": "biome format --write .",
     "hh:login": "bun --filter @qbs-autonaim/jobs hh:login",
