--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -18,10 +18,8 @@
     "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
-    "api": "bun run src/api/index.ts",
-    "api:dev": "bun run --env-file ../../.env --watch src/api/index.ts",
-    "bot": "bun run --env-file ../../.env src/start-bot.ts",
-    "bot:dev": "bun --watch --env-file ../../.env src/start-bot.ts",
+    "start": "bun run src/api/index.ts",
+    "start:dev": "bun run --env-file ../../.env --watch src/api/index.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
