--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
     "@types/bun": "1.3.4",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "25.0.0",
     "typescript": "5.9.3"
   }
