--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -30,8 +30,9 @@
     "check": "biome check .",
     "push": "bun with-env drizzle-kit push",
     "studio": "bun with-env drizzle-kit studio",
-    "generate-key": "bun src/scripts/generate-encryption-key.ts",
+    "generate-key": "bun with-env bun src/scripts/generate-encryption-key.ts",
     "set-admin": "bun with-env bun src/scripts/set-admin-role.ts",
+    "setup": "bun with-env bun src/scripts/setup-uuid-v7.ts",
     "migrate-workspaces": "bun with-env bun src/scripts/migrate-to-workspaces.ts",
     "migrate-company": "bun with-env bun src/scripts/migrate-company-settings.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
