--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
+    "@types/mime-types": "^3.0.1",
     "typescript": "5.9.3"
   }
 }
