--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,7 +36,7 @@
     "better-auth": "1.4.6",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
-    "isomorphic-dompurify": "^2.34.0",
+    "jsdom": "^27.3.0",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
     "react": "19.2.1",
@@ -49,6 +49,7 @@
     "@qbs-autonaim/tailwind-config": "workspace:*",
     "@qbs-autonaim/tsconfig": "workspace:*",
     "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "25.0.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
