--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,11 +24,15 @@
     "@qbs-autonaim/jobs": "workspace:*",
     "@qbs-autonaim/validators": "workspace:*",
     "@trpc/server": "^11.7.2",
+    "dompurify": "^3.3.1",
+    "jsdom": "^27.3.0",
     "superjson": "2.2.6",
     "zod": "4.1.13"
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
+    "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^21.1.7",
     "typescript": "5.9.3"
   }
 }
