--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,12 +24,13 @@
     "@qbs-autonaim/jobs": "workspace:*",
     "@qbs-autonaim/validators": "workspace:*",
     "@trpc/server": "^11.7.2",
-    "isomorphic-dompurify": "^2.34.0",
+    "sanitize-html": "^2.17.0",
     "superjson": "2.2.6",
     "zod": "4.1.13"
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
+    "@types/sanitize-html": "^2.16.0",
     "typescript": "5.9.3"
   }
 }
