--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -24,10 +24,10 @@
     "@aws-sdk/client-s3": "3.948.0",
     "@aws-sdk/s3-request-presigner": "3.948.0",
     "@qbs-autonaim/config": "workspace:*",
-    "ai": "5.0.113",
+    "ai": "6.0.0-beta.151",
     "langfuse": "3.38.6",
     "sharp": "^0.34.5",
-    "zod": "4.1.13"
+    "zod": "4.2.0"
   },
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
