--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -19,12 +19,12 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "1.0.32",
-    "@ai-sdk/openai": "2.0.86",
+    "@ai-sdk/deepseek": "^2.0.0-beta.50",
+    "@ai-sdk/openai": "^3.0.0-beta.96",
     "@aws-sdk/client-s3": "3.948.0",
     "@aws-sdk/s3-request-presigner": "3.948.0",
     "@qbs-autonaim/config": "workspace:*",
-    "ai": "6.0.0-beta.151",
+    "ai": "^6.0.0-beta.151",
     "langfuse": "3.38.6",
     "sharp": "^0.34.5",
     "zod": "4.2.0"
