--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,14 +5,16 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./src/index.ts"
+      "default": "./dist/index.js"
     }
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsc",
     "format": "biome format .",
     "lint": "biome lint .",
     "check": "biome check .",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@qbs-autonaim/tsconfig": "workspace:*",
     "@types/sanitize-html": "^2.16.0",
+    "tsup": "^8.5.1",
     "typescript": "5.9.3"
   }
 }
