--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "dev": "bun with-env email dev -p 3002",
-    "build": "tsup",
+    "build": "tsdown",
     "export": "email export",
     "with-env": "bun run --env-file ../../.env"
   },
@@ -40,7 +40,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
-    "tsup": "8.5.1",
+    "tsdown": "0.18.0",
     "typescript": "5.9.3"
   }
 }
