--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -62,7 +62,7 @@
     "@types/node": "25.0.2",
     "cross-env": "10.1.0",
     "inngest-cli": "1.15.0",
-    "tsup": "8.5.1",
+    "tsdown": "0.18.0",
     "typescript": "5.9.3"
   }
 }
