--- a/packages/tg-client/tsconfig.json
+++ b/packages/tg-client/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@qbs-autonaim/tsconfig/base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "declaration": true,
+    "emitDeclarationOnly": false,
+    "noEmit": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
