--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -6,18 +6,18 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./src/index.ts"
+      "default": "./dist/index.js"
     },
     "./sdk": {
       "types": "./dist/sdk/client.d.ts",
-      "default": "./src/sdk/client.ts"
+      "default": "./dist/sdk/client.js"
     }
   },
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsdown && tsc --emitDeclarationOnly",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsc",
+    "dev": "tsdown --watch",
     "start": "bun run src/api/index.ts",
     "start:dev": "bun run --env-file ../../.env --watch src/api/index.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
@@ -39,6 +39,7 @@
     "@types/bun": "1.3.4",
     "@types/mime-types": "^3.0.1",
     "@types/node": "25.0.2",
+    "tsdown": "^0.2.11",
     "typescript": "5.9.3"
   }
 }
