--- a/packages/tg-client/tsconfig.json
+++ b/packages/tg-client/tsconfig.json
@@ -4,8 +4,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "declaration": true,
-    "emitDeclarationOnly": false,
-    "noEmit": false
+    "emitDeclarationOnly": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
