--- a/packages/tg-client/tsconfig.json
+++ b/packages/tg-client/tsconfig.json
@@ -1,11 +1,5 @@
 {
-  "extends": "@qbs-autonaim/tsconfig/base.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true,
-    "emitDeclarationOnly": true
-  },
-  "include": ["src"],
+  "extends": "@qbs-autonaim/tsconfig/compiled-package.json",
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
