--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -35,8 +35,8 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "^2.0.0-beta.54",
-    "@ai-sdk/openai": "^3.0.0-beta.101",
+    "@ai-sdk/deepseek": "2.0.0-beta.54",
+    "@ai-sdk/openai": "3.0.0-beta.101",
     "@aws-sdk/client-s3": "3.952.0",
     "@aws-sdk/s3-request-presigner": "3.952.0",
     "@qbs-autonaim/config": "workspace:*",
