--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -5,28 +5,24 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
     },
     "./ai": {
-      "types": "./dist/ai.d.ts",
-      "import": "./dist/ai.js",
-      "require": "./dist/ai.cjs"
+      "types": "./dist/ai.d.mts",
+      "default": "./dist/ai.mjs"
     },
     "./s3": {
-      "types": "./dist/s3.d.ts",
-      "import": "./dist/s3.js",
-      "require": "./dist/s3.cjs"
+      "types": "./dist/s3.d.mts",
+      "default": "./dist/s3.mjs"
     },
     "./image": {
-      "types": "./dist/image.d.ts",
-      "import": "./dist/image.js",
-      "require": "./dist/image.cjs"
+      "types": "./dist/image.d.mts",
+      "default": "./dist/image.mjs"
     }
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "license": "MIT",
   "scripts": {
     "build": "tsdown",
