--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -2,11 +2,10 @@
   "name": "@qbs-autonaim/config",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
+      "types": "./dist/index.d.mts",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     }
   },
