--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -2,7 +2,6 @@
   "name": "@qbs-autonaim/lib",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.mts",
@@ -27,7 +26,7 @@
   "scripts": {
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsc",
+    "dev": "tsdown --watch",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
