--- a/packages/emails/tsconfig.json
+++ b/packages/emails/tsconfig.json
@@ -4,6 +4,8 @@
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
     "moduleResolution": "Bundler",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "lib": ["ES2022", "DOM"]
   }
 }
