--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "@qbs-autonaim/tsconfig/base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "lib": ["ES2022", "DOM"]
   },
   "include": ["src"]
 }
