--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -9,6 +9,16 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./send": {
+      "types": "./dist/send.d.ts",
+      "default": "./dist/send.js"
+    }
+  },
   "files": [
     "dist/**"
   ],
