--- a/packages/tg-client/package.json
+++ b/packages/tg-client/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
     },
     "./sdk": {
-      "types": "./dist/sdk/client.d.ts",
-      "default": "./dist/sdk/client.js"
+      "types": "./dist/sdk/client.d.mts",
+      "default": "./dist/sdk/client.mjs"
     }
   },
   "license": "MIT",
