--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "2.15.4",
+    "sharp": "^0.34.5",
     "superjson": "2.2.6",
     "zod": "4.2.1"
   },
