--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,9 +40,11 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "2.15.4",
-    "sharp": "^0.34.5",
     "superjson": "2.2.6",
     "zod": "4.2.1"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@qbs-autonaim/tailwind-config": "workspace:*",
