--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,7 +12,7 @@
   "types": "./dist/index.d.mts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsdown",
     "dev": "tsdown --watch",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "biome format .",
