--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,12 +4,10 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.mts",
-      "default": "./dist/index.mjs"
+      "types": "./dist/index.d.ts",
+      "default": "./src/index.ts"
     }
   },
-  "main": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
