--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "tsdown --watch",
+    "dev": "tsc --watch",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "biome format .",
     "lint": "biome lint .",
