--- a/.env.example
+++ b/.env.example
@@ -22,20 +22,20 @@ AUTH_GOOGLE_SECRET=''
 ENCRYPTION_KEY=''
 
 # AI Provider Configuration
-# Choose between 'openai' or 'deepseek' (default: deepseek)
-AI_PROVIDER='deepseek'
+# Choose between 'openai' or 'deepseek' (default: openai)
+# If primary provider key is missing, automatically falls back to the other
+AI_PROVIDER='openai'
 
 # AI Model (optional, uses defaults if not specified)
-# For OpenAI: gpt-4o-mini, gpt-4o, gpt-4-turbo, gpt-3.5-turbo
-# For DeepSeek: deepseek-chat, deepseek-coder
+# For OpenAI: gpt-4o-mini (default), gpt-4o, gpt-4-turbo
+# For DeepSeek: deepseek-chat (default), deepseek-coder
 AI_MODEL=''
 
-# OpenAI API key (required if AI_PROVIDER=openai)
-# Also used for Whisper transcription
+# OpenAI API key (primary for interviews, also used for Whisper transcription)
 # Get your API key from https://platform.openai.com
 OPENAI_API_KEY=''
 
-# DeepSeek API key (required if AI_PROVIDER=deepseek)
+# DeepSeek API key (fallback if OpenAI key is missing)
 # Get your API key from https://platform.deepseek.com
 DEEPSEEK_API_KEY=''
 
