--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - 'packages/jobs/**'
       - 'packages/prompts/**'
+      - 'packages/lib/**'
 jobs:
   # Deploy to EKS
   deploy:
