--- a/.github/workflows/tg-client.yml
+++ b/.github/workflows/tg-client.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - 'packages/tg-client/**'
       - 'packages/jobs/**'
+      - 'packages/lib/**'
 jobs:
   # Deploy to EKS
   deploy:
