--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -1,9 +1,9 @@
-name: Deploy Web
+name: Deploy app
 on:
   push:
     branches: [main]
     paths:
-      - "apps/web/**"
+      - "apps/app/**"
       - "packages/**"
 env:
   REGISTRY: ghcr.io
@@ -31,7 +31,7 @@ jobs:
         run: |
           IMAGE_ID=$REGISTRY/$IMAGE_NAME
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          docker build . --file apps/web/Dockerfile \
+          docker build . --file apps/app/Dockerfile \
             --tag $IMAGE_ID:$IMAGE_TAG \
             --tag $IMAGE_ID:latest
           docker push $IMAGE_ID:latest
